Bug 1356421 - Part 1: Fix for making OpenVR get correct device types for Gamepad id; r=kip

MozReview-Commit-ID: KI25bjqKTTL